minecraft/init.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
