minecraft/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: games
spec:
  type: ClusterIP
  ports:
  - port: 25565
    targetPort: 25565
    name: java
  selector:
    app: minecraft
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
      volumes:
        - name: minecraft-vol
          persistentVolumeClaim:
            claimName: minecraft
      containers:
      - name: minecraft
        image: itzg/minecraft-server:2026.1.3
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        volumeMounts:
          - mountPath: "/data"
            name: minecraft-vol
        ports:
          - containerPort: 25565
---
