minecraft/mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: minecraft
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.202
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: minecraft-mysql-local-pvc
      containers:
      - name: mysql
        image: mysql:latest
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: mysql-vol
---
