minecraft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft
  namespace: minecraft
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mc.sushiraccoon.com
    secretName: minecraft-tls
  rules:
  - host: mc.sushiraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-plan
  namespace: minecraft
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - statusmc.sushiraccoon.com
    secretName: minecraft-plan-tls
  rules:
  - host: statusmc.sushiraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minecraft-plan
            port:
              number: 80
